# ckan-extension

.github/workflows/: publish-docker-master.yml
ckan/: Dockerfile.dev
src/ckanext-extended-dataset-details/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-extended-dataset-details/.github/workflows/: test.yml
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/assets/: script.js  webassets.yml
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/public/css/: extended_details.css
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/templates/dataset/: extended_details.html
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/templates/package/snippets/: additional_info.html  package_basic_fields.html
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-extended-dataset-details/ckanext/extended_dataset_details/tests/logic/: test_action.py  test_auth.py  test_validators.py
src/ckanext-myext/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-myext/.github/workflows/: test.yml
src/ckanext-myext/ckanext/myext/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-myext/ckanext/myext/assets/: script.js  webassets.yml
src/ckanext-myext/ckanext/myext/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-myext/ckanext/myext/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-myext/ckanext/myext/tests/logic/: test_action.py  test_auth.py  test_validators.py
