[metadata]
name = ckanext-extended-dataset-details
version = 0.0.1
description = This is a simple extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mpmohi.com/ckanext-extended-dataset-details
author = Md Mohiuddin Ahmed
author_email = sumon13mp@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             extended_dataset_details = ckanext.extended_dataset_details.plugin:ExtendedDatasetDetailsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/extended_dataset_details/i18n/ckanext-extended_dataset_details.pot
width = 80

[init_catalog]
domain = ckanext-extended_dataset_details
input_file = ckanext/extended_dataset_details/i18n/ckanext-extended_dataset_details.pot
output_dir = ckanext/extended_dataset_details/i18n

[update_catalog]
domain = ckanext-extended_dataset_details
input_file = ckanext/extended_dataset_details/i18n/ckanext-extended_dataset_details.pot
output_dir = ckanext/extended_dataset_details/i18n
previous = true

[compile_catalog]
domain = ckanext-extended_dataset_details
directory = ckanext/extended_dataset_details/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
